samples/_failures_safe/1761152838_9b3290_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b9ecef37.c: In function ‘main’:
./samples/SAFE/__tmp_b9ecef37.c:149:16: error: expected ‘;’ at end of input
  149 |         fprintf
      |                ^
      |                ;
./samples/SAFE/__tmp_b9ecef37.c:149:9: error: expected declaration or statement at end of input
  149 |         fprintf
      |         ^~~~~~~
./samples/SAFE/__tmp_b9ecef37.c:149:9: error: expected declaration or statement at end of input
